--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2,4 +2,6 @@
 /* CSS Document */
 
 .active_nav{background-color:#e74c3c!important;}
+.nemu_hover:hover{color:black!important;}
+.button_coupon{margin-left:50px;} 
 
